tests/snapshots/test_examples__fail__safety1_proof_invariants.fly.z3.snap
---
source: tests/test_examples.rs
expression: stderr
---
verification errors:
error: init does not imply invariant
   ┌─ examples/fail/safety1_proof_invariants.fly:11:1
   │
11 │ assert always !p
   │ ^^^^^^^^^^^^^^^^
   │
   = counter example:
     p = false
     q = false


