tests/snapshots/test_examples__fail__safety2_missing_inv.fly.solver.snap
---
source: tests/test_examples.rs
expression: stderr
---
verification errors:
error: invariant is not inductive
   ┌─ examples/fail/safety2_missing_inv.fly:11:1
   │
11 │ assert always x
   │ ^^^^^^^^^^^^^^^
   │
   = counter example:
     x = true
     y = true
     z = false


