tests/snapshots/test_examples__fail__safety3_extra_inv.fly.1.cvc5.snap
---
source: tests/test_examples.rs
expression: combined_stdout_stderr
---

======== STDERR: ===========
verification errors:
error: invariant is not inductive
   ┌─ tests/examples/fail/safety3_extra_inv.fly:13:1
   │
13 │ assert always x
   │ ^^^^^^^^^^^^^^^
   │
   = counter example:
     x = true
     y = true
     z = true


