tests/snapshots/test_examples__fail__safety3_extra_inv.fly.cvc5.snap
---
source: tests/test_examples.rs
expression: stderr
---
verification errors:
error: invariant is not inductive
   ┌─ examples/fail/safety3_extra_inv.fly:13:1
   │
13 │ assert always x
   │ ^^^^^^^^^^^^^^^
   │
   = counter example:
     x = true
     y = true
     z = true


